A giant patchset that restructures everything.
* Split the monolith in docker_dumps_tester.py into classes for handling
  container operations, image creation and destruction, labels, configuration,
  command line options, and wikifarm commands.
* Added Dockerfiles for "base" images and "final" images; the final images
  images are specific to a given container set and  have names of all of the
  containers for the set baked in. Also added script and per-image-type
  configuration files to make these updates for final images.
* Made the httpd final image actually do something: it serves an index.html
  page if you connect to the instance on port 80 from the host running the
  containers.
* Added placeholder php-fpm Dockerfiles.
* Added a method that lists all networks, containers, images for all sets,
  and this is now shown if you run docker_dumps_tester with no arguments.
* Added "squash" configuration setting.
* Made the generation of all image and container types configurable.
* Renamed mariadb Dockerfiles to use the container type name instead.
* Added option to build/create/start just one image or container type.
* Updated TODOs, moved archtectural/design notes out to a separate document.
* Updated README with some extremely minimal setup notes.
* Made ssh-to-container script a little more friendly.
* Fixed up sources.list to include the php component repo and buster-updates.
* Added minimal .gitignore.

--- a/default.conf
+++ b/default.conf
@@ -6,10 +6,19 @@ sets:
       snapshots: 1
       dbdatadir: /secondary/wikifarms/defaultset/dbdata
       wikifarmdir: /secondary/wikifarms/defaultset/wikifarm
+      dbprimary: true
       dbreplicas: 0
-      httpd: false
-      nfs: false
+      dbextstore: false
+      httpd: true
+      phpfpm: true
+      dumpsdata: false
 
 tests:
   defaultset:
       wikidata_batch_test
+
+# misc container and image caching options
+squash: false
+# FIXME make this DTRT when enabled, not prune the world
+# but just images created on our behalf
+prune: false
