add new script setup_image.py for base and final image generation
This script runs in a Docker build step via RUN.

Along with it we also have a credentials file in yaml format, which
contains the container root and various db user passwords, so they
may be set in the final image build.

User creds have also been added to the default config.

The db primary image has been cleaned up a bit. A fixed server_id
and gtid_domain are now set, and db files are imported for the specified
wikdbs. Additionally there is a tiny amount of testing now of db-related
methods in the build.

We also now show build logs if --verbose is specified.

--- a/default.conf
+++ b/default.conf
@@ -1,24 +1,63 @@
 # sample settings for setting up a wikifarm of containers for
 # testing and a vanilla test
 
+# these values are fallback for all container sets
+global:
+     passwords:
+         dbs:
+             wikidb_user: wikidbuser_defaultset
+             wikidb_admin: wikidbadmin_defaultset
+             root: notverysecure
+         containers:
+             root: testing
+
 sets:
-  defaultset:
-      snapshots: 1
-      dbdatadir: /secondary/wikifarms/defaultset/dbdata
-      wikifarmdir: /secondary/wikifarms/defaultset/wikifarm
-      dbprimary: true
-      dbreplicas: 0
-      dbextstore: false
-      httpd: true
-      phpfpm: true
-      dumpsdata: false
+    defaultset:
+        snapshots: 1
+        dbdatadir: /secondary/wikifarms/defaultset/dbdata
+        wikifarmdir: /secondary/wikifarms/defaultset/wikifarm
+        dbprimary: true
+        dbreplicas: 0
+        dbextstore: false
+        httpd: true
+        phpfpm: true
+        dumpsdata: false
+
+        # these entries must correspond to <wikidb>.<something>.sql.gz files
+        # that are in the docker_helpers/mariadb/imports/<setname> subdirectory.
+        # dbs will be created and the data imported for each entry
+        # in the list.
+        # if you want the same data to be used in multiple wikifarms,
+        # just symlink the file from one set subdir to another.
+        wikidbs:
+            - elwikivoyage
+
+        passwords:
+            # all wiki dbs have the same wikiuser and same wikiadmin
+            # accounts, with a single shared password for each account
+            # defined in your config. If you don't define one, the default
+            # password for that account will be used,
+            # "wikidb<user|admin>.<setname>".
+
+            # the password for the root db user likewise will default to
+            # "notverysecure" unless you set it in your config.
+        dbs:
+            wiki_dbuser: wikidbuser_defaultset
+            wiki_dbadmin: wikidbadmin_defaultset
+            root: notverysecure
+            # the password to ssh in as root to any container in the set
+            # if you do not set it in your config, the default "testing"
+            # will be used.
+        containers:
+            root: testing
 
 tests:
-  defaultset:
-      wikidata_batch_test
+    defaultset:
+        wikidata_batch_test
 
 # misc container and image caching options
 squash: false
+
 # FIXME make this DTRT when enabled, not prune the world
 # but just images created on our behalf
 prune: false
