--- a/docker_helpers/mariadb/my.cnf
+++ b/docker_helpers/mariadb/my.cnf
@@ -20,7 +20,9 @@ user       = mysql
 socket     = /run/mysqld/mysqld.sock
 port       = 3306
 extra-port = 3307
-server_id  = FIXME
+# this is the id for the primary, regardless of set
+# replicas will be 100nn, also regardless of set
+server_id  = 10001
 
 # this varies with the mariadb version
 basedir    = /opt/wmf-mariadb104
@@ -29,7 +31,9 @@ datadir    = /srv/sqldata
 tmpdir     = /srv/tmp
 
 # gtid_domain_id flag is needed for multisource replication and GTID.
-gtid_domain_id  = FIXME
+# all db instances will have this domain id. until of course we get to
+# external stores :-/
+gtid_domain_id  = 10000
 
 
 skip-external-locking
