--- a/docker_helpers/mariadb/substitution.conf
+++ b/docker_helpers/mariadb/substitution.conf
@@ -5,4 +5,4 @@
 
 # This file should be different for each image.
 
-# For mariadb instances, there are no substitutions necessary yet.
+# For db instances, there are no substitutions necessary yet.
