--- a/docker_helpers/Dockerfile.snapshot-final
+++ b/docker_helpers/Dockerfile.snapshot-final
@@ -5,8 +5,8 @@ ARG SETNAME
 
 # we want the file with all the container names for the set; these will
 # be embedded in various files in the image
-COPY ["snapshot/substitution.conf", "do_container_subs.py", "container_list.$SETNAME", "/root/"]
-RUN python3 root/do_container_subs.py "$SETNAME"
+COPY ["snapshot/substitution.conf", "container_list.$SETNAME", "credentials.$SETNAME.yaml", "/root/"]
+RUN python3 /root/setup_image.py --stage final --type snapshot --set "$SETNAME"
 
 EXPOSE 22
 CMD /usr/sbin/sshd -D
