--- a/default.conf
+++ b/default.conf
@@ -32,24 +32,39 @@ sets:
         wikidbs:
             - elwikivoyage
 
+        # all wiki dbs have the same wikiuser and same wikiadmin
+        # accounts, with a single shared password for each account
+        # defined in your config. If you don't define one, the default
+        # password for that account will be used,
+        # "wikidb<user|admin>.<setname>".
+        #
+        # the password for the root db user likewise will default to
+        # "notverysecure" unless you set it in your config.
         passwords:
-            # all wiki dbs have the same wikiuser and same wikiadmin
-            # accounts, with a single shared password for each account
-            # defined in your config. If you don't define one, the default
-            # password for that account will be used,
-            # "wikidb<user|admin>.<setname>".
+            dbs:
+                wiki_dbuser: wikidbuser_defaultset
+                wiki_dbadmin: wikidbadmin_defaultset
+                root: notverysecure
+                # the password to ssh in as root to any container in the set
+                # if you do not set it in your config, the default "testing"
+                # will be used.
+            containers:
+                root: testing
 
-            # the password for the root db user likewise will default to
-            # "notverysecure" unless you set it in your config.
-        dbs:
-            wiki_dbuser: wikidbuser_defaultset
-            wiki_dbadmin: wikidbadmin_defaultset
-            root: notverysecure
-            # the password to ssh in as root to any container in the set
-            # if you do not set it in your config, the default "testing"
-            # will be used.
-        containers:
-            root: testing
+        # these are the volumes needed for various containers;
+        # specify the path on your local host that will be mounted
+        # for each one
+        volumes:
+            # where the mediawiki wikifarm lives. the volume should
+            # have a subdirectory "w" containing subdirs <wikiname>/mw
+            # where mw is a copy of or a symlink to the mediawiki branch
+            # you want to use. NOTE THAT if you make mw a symlink, it
+            # needs to be a relative link to something in the wikifarm tree,
+            # so that it is accessible to the container.
+            #
+            # this volume is mounted on both the httpd container
+            # for static assets and the php-fpm container for php files.
+            wikifarm: /var/www/html/wikifarm
 
 tests:
     defaultset:
