--- a/docker_helpers/httpd/httpd-configs/apache2.conf
+++ b/docker_helpers/httpd/httpd-configs/apache2.conf
@@ -19,21 +19,9 @@ Group www-data
 
 ServerName HTTPD
 
-DocumentRoot "/srv/mediawiki/docroot/default"
-
-<Directory />
-    Options FollowSymLinks
+<Directory /srv/mediawiki/wikifarm>
+    Options -Indexes +FollowSymLinks
     AllowOverride None
-</Directory>
-
-# the only thing in here is an index.html page
-# telling the user they shouldn't be here.
-<Directory "/srv/mediawiki/docroot/default">
-    Options -Indexes +FollowSymLinks +MultiViews
-    AllowOverride None
-
-    Order allow,deny
-    Allow from all
 </Directory>
 
 <Files ~ "^\.ht">
@@ -53,19 +41,23 @@ UseCanonicalName On
 
 TypesConfig /etc/mime.types
 
+LogFormat "%h %l %u %t \"%r\" %>s %b" common
+CustomLog /var/log/apache2/access.log common
 ErrorLog /var/log/apache2/error.log
 
-LogLevel notice
+LogLevel debug
+# LogLevel info
 
-LogFormat "%v:%p %h %l %u %t \"%r\" %>s %b \"%{Referer}i\" \"%{User-Agent}i\" %D" vhost_combined
-LogFormat "%h %l %u %t \"%r\" %>s %b \"%{Referer}i\" \"%{User-Agent}i\" %D" combined
-LogFormat "%h %l %u %t \"%r\" %>s %b" common
-LogFormat "%{Referer}i -> %U" referer
-LogFormat "%{User-agent}i" agent
+# we have a few static files in the dumptest subdir, outside of the DocumentRoot
+Alias /index.html /srv/mediawiki/dumptest/index.html
+Alias /404.html /srv/mediawiki/dumptest/404.html
+Alias /503.html /srv/mediawiki/dumptest/503.html
+Alias /404.php /srv/mediawiki/dumptest/404.php
+Alias /hello.php /srv/mediawiki/dumptest/hello.php
+Alias /invalidate-cache.php /srv/mediawiki/dumptest/invalidate-cache.php
+Alias /containers.html /srv/mediawiki/dumptest/containers.html
 
-# TODO: convert to a more refined method, see T265876
-CustomLog /dev/stdout wmfjson
-
+# these are made available by setup_image.py
 ErrorDocument 503 /503.html
 # in prod we have /w/404.php but here in the testbed we don't care.
 ErrorDocument 404 /404.html
