--- a/docker_helpers/httpd/httpd-configs/sites/000-default.conf
+++ b/docker_helpers/httpd/httpd-configs/sites/000-default.conf
@@ -3,30 +3,32 @@
     ServerName HTTPD
     ServerAlias *
 
-    DocumentRoot /srv/app
+    DocumentRoot /srv/mediawiki/wikifarm/w
     RewriteEngine on
 
-    <Directory /srv/app/>
+   # the only thing in here at the top level is an index.html page
+   # telling the user they shouldn't be here. The wiki subdirs
+   # are where the user ought to be.
+    <Directory /srv/mediawiki/wikifarm/w>
         Options -Indexes +FollowSymLinks
         AllowOverride None
         Require all granted
     </Directory>
 
-    # Default PHP application.
-    # Serve /static/ from disk; this should be a mounted volume. These assets don't
-    # change often but they are not 100% set in stone.
-    # Allow requests to the index.html page which is a "Welcome to the testbed" page
-    # Rewrite everything else to index.php
-    RewriteRule ^/index.php$ - [L]
-    RewriteRule ^/index.html$ - [L]
-    RewriteCond %{DOCUMENT_ROOT}/%{REQUEST_FILENAME} -f
-    # production has this for wikifarm paths but we don't need it, nor static.php
-    # RewriteRule ^/static/.* - [L]
+    # A mounted volume will contain the mediawiki wikifarm
+    # including static assets, extensions and all php files for each wiki
+    #
+    # paths should look like /<wikiname>/mw/path-to-wiki-asse-or-php-file
 
-    RewriteRule ^.*$ /index.php [L]
+    # top level directory should give you index.html
+    RewriteRule "^/$" /index.html [L]
+    
+    # rewrite all other bare directories to directory/index.php
+    RewriteCond %{DOCUMENT_ROOT}/%{REQUEST_FILENAME} -d
+    RewriteRule "^(.*)$ $1/index.php" [L]
 
+    # for any php files, go ask the php-fpm backend about them
     <FilesMatch "\.php$">
         SetHandler "proxy:fcgi://PHPFPM:9000"
     </FilesMatch>
 </VirtualHost>
-
