Add instructions for installation and configuration, fix previous breakage
* Start document about configuration, listing main settings
* Document the prereqs and steps required for installation
* Simplify how user-defined config settings override default ones, and change
  the test suite accordingly
* Simplify how global config settings are used as fallback from specific ones
* Make image listing work consistently throughout the code
* Add more progress messages describing what is being removed in the case
  of base or final images or containers
* Add purgeall option to remove the base image for everything else, as well
  as all derived images and containers (i.e. everything in all sets)
* Make user-defined config file argument work
* Make mysql user for mariadb have fixed uid/gid in images and containers
* Move invocation of setup_image.py to final image build stage so that it
  is only included in those images, facilitating debugging of the script
* Fix creation of db users specified in per-set section of user config
* Add the phpfpm config files left out of previous commits
* Add my local config file to .gitignore
* Fix echo for motd for containers

--- a/docker_helpers/Dockerfile.dbprimary-base
+++ b/docker_helpers/Dockerfile.dbprimary-base
@@ -13,15 +13,12 @@ COPY ["mariadb/scripts/setup-alternatives-links.sh", "/root/"]
 #  - make symlinks from /opt/wmf-mariadb104 to /usr/local/bin and from mysql names to mariadb
 #  - set up the mysql user
 #  - install system and other dbs normally done at initialization in the systemd unit
-#  - start up the server, secure it somewhat, set up root password, shut it down again (this last is in
-#    setup_image.py)
 RUN /bin/bash /root/setup-alternatives-links.sh && \
-    /usr/sbin/groupadd mysql && /usr/sbin/useradd -g mysql mysql && \
+    /usr/sbin/groupadd -g 499 mysql && /usr/sbin/useradd -g mysql mysql && \
     mkdir -p /srv/tmp /srv/sqldata /run/mysqld  && chown mysql:mysql /srv/tmp /srv/sqldata /run/mysqld && \
-    /opt/wmf-mariadb104/scripts/mysql_install_db -u mysql --datadir=/srv/sqldata --auth-root-authentication-method=normal && \
-    /usr/bin/python3 /root/setup_image.py --stage base --type dbprimary
+    /opt/wmf-mariadb104/scripts/mysql_install_db -u mysql --datadir=/srv/sqldata --auth-root-authentication-method=normal
 
-# ports for sshd, mariadb
-EXPOSE 22 3306
+# ports for sshd
+EXPOSE 22
 
-CMD /usr/dbin/sshd && /opt/wmf-mariadb104/bin/mysqld --basedir=/opt/wmf-mariadb104/
+CMD /usr/dbin/sshd -D
