--- a/test_files/atg.conf
+++ b/test_files/atg.conf
@@ -1,26 +1,19 @@
-# sample settings for setting up a wikifarm of containers for
-# testing and a vanilla test
-
-# these values are added for all container sets but will be overridden if there
-# is a "global" stanza in a user-specified config
-# if you do not want any global values, add a global stanza in your user-defined config
-# with no entries
+# these values are in addition to those for all container sets
+# if there is a root value in the sets:setname:passwords:dbs
+# or sets:setname:passwords:containers entries, those will be
+# used instead of these
 global:
      passwords:
          dbs:
-             wikidb_user: wikidbuser_defaultset
-             wikidb_admin: wikidbadmin_defaultset
              root: notverysecure
          containers:
              root: testing
 
-# this will be overridded by any user-specified config if it has a "sets"
-# stanza in it
 sets:
-    defaultset:
+    atg:
         snapshots: 1
-        dbdatadir: /secondary/wikifarms/defaultset/dbdata
-        wikifarmdir: /secondary/wikifarms/defaultset/wikifarm
+        # not needed??
+        # wikifarmdir: /secondary/wikifarms/defaultset/wikifarm
         dbprimary: true
         dbreplicas: 0
         dbextstore: false
@@ -47,8 +40,7 @@ sets:
         # "notverysecure" unless you set it in your config.
         passwords:
             dbs:
-                wiki_dbuser: wikidbuser_defaultset
-                wiki_dbadmin: wikidbadmin_defaultset
+                elwv_user: elwv_hahaha
                 root: notverysecure
                 # the password to ssh in as root to any container in the set
                 # if you do not set it in your config, the default "testing"
@@ -74,7 +66,16 @@ sets:
 
             # where the dumps repo of python code is checked out.
             # this volume is mounted on the snapshot containers.
-            dumpsrepo: /src/dumps
+            dumpsrepo: /home/ariel/wmf/dumps/testing/dumps
+
+            # I keep wanting this so we can import once and
+            # reuse everywhere. But this is the wrong way
+            # to do it. Rather, we want a layer that is used
+            # for db replica images as well as the primary
+            # db server, with this import done already, since
+            # the primary and the replicas have to have
+            # separate copies of these files.
+            # dbdatadir: /home/ariel/wmf/dumps/testing/atgdbs
 
 tests:
     defaultset:
