add volumes and dumpsgen user for snapshot containers

--- a/default.conf
+++ b/default.conf
@@ -74,7 +74,17 @@ sets:
 
             # where the dumps repo of python code is checked out.
             # this volume is mounted on the snapshot containers.
-            dumpsrepo: /src/dumps
+            dumpsrepo: /srv/dumpstest/dumpsrepo
+
+            # where the dumps configs, dblists and stages files are.
+            # for more information on the precise layout, see
+            # the file DUMPSFILES.md
+            # this volume is mounted on the snapshot containers.
+            dumpsetc: /srv/dumpstest/etc
+
+            # where the dumps output files will be written.
+            # this volume is mounted on the snapshot containers.
+            dumpsruns: /srv/dumpstest/runs
 
 tests:
     defaultset:
