--- a/docker_helpers/Dockerfile.snapshot-base
+++ b/docker_helpers/Dockerfile.snapshot-base
@@ -7,5 +7,7 @@ RUN apt-get install -y bzip2 lbzip2 mwbzutils gzip p7zip-full default-mysql-clie
    php7.2-bcmath php7.2-bz2 php7.2-cli php7.2-common php7.2-curl php7.2-dba php7.2-fpm php7.2-gd php7.2-gmp \
    php7.2-intl php7.2-json php7.2-mbstring php7.2-mysql php7.2-opcache php7.2-readline php7.2-xml
 
+RUN /usr/sbin/groupadd -g 489 dumpsgen && /usr/sbin/useradd -g dumpsgen dumpsgen
+
 EXPOSE 22
 CMD /usr/sbin/sshd -D
